--- a/Tenzies/src/index.css
+++ b/Tenzies/src/index.css
@@ -1,10 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;500;600;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+  font-family: 'Quicksand', sans-serif;
+
   line-height: 1.5;
+  /* font-weight: 400; */
   font-weight: 400;
 
   color-scheme: light dark;
